# timed-rs

./: .gitignore  Cargo.toml  README.md
nix/modules/: devshell.nix  rust.nix
src/: commands.rs  main.rs  time.rs
src/commands/: clock.rs  stopwatch.rs  timer.rs
src/tui/: tui.rs
