[package]
authors = ["Daru"]
edition = "2021"
name = "timed-rs"
description = "A simple multi-featured clock written in rust"
version = "0.1.0"

[[bin]]
name = "trs"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.3.14", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
